prevent jumping when mousing over values

--- a/packages/desktop-gui/src/settings/settings.scss
+++ b/packages/desktop-gui/src/settings/settings.scss
@@ -89,6 +89,7 @@
       margin: 4px;
       display: inline-block;
       line-height: 10px;
+      border-bottom: 1px solid transparent
     }
 
     .key-value-pair-value:hover {
